--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <span class="status-text" id="statusText">Desconectado</span>
             </div>
         </header>
+TELEGRAM_BOT_TOKEN=8418581740:AAGRvp8eJ7Zjax_CKUiDI-5vWDxBwNRV_fg
+TELEGRAM_CHAT_ID=1796672690
 
         <!-- Main Content -->
         <main class="main-content">
@@ -29,11 +31,11 @@
                     <div class="config-grid">
                         <div class="form-group">
                             <label class="form-label" for="botToken">Token del Bot</label>
-                            <input type="text" id="botToken" class="form-control" placeholder="123456:ABCDEF..." value="EJEMPLO_BOT_TOKEN_123456:ABCDEF">
+                            <input type="text" id="botToken" class="form-control" placeholder="123456:ABCDEF..." value="8418581740:AAGRvp8eJ7Zjax_CKUiDI-5vWDxBwNRV_fg">
                         </div>
                         <div class="form-group">
                             <label class="form-label" for="chatId">Chat ID</label>
-                            <input type="text" id="chatId" class="form-control" placeholder="-1001234567890" value="-1001234567890">
+                            <input type="text" id="chatId" class="form-control" placeholder="-1001234567890" value="1796672690">
                         </div>
                         <div class="form-group">
                             <button class="btn btn--primary btn--full-width" id="toggleService">
